--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
 *{
     font-family: 'Roboto', sans-serif;
 }
+
+.page_background_image{
+    background-image: linear-gradient(45deg,#5cb5ea 45%, black 43%, 47%, #d6b870 47%);
+    width: 100vw;
+    height: 100vh;
+    /* background-color: red;
+    color: white; */
+}
