--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-*{
+body{
     font-family: 'Roboto', sans-serif;
 }
 
@@ -6,6 +6,20 @@
     background-image: linear-gradient(45deg,#5cb5ea 45%, black 43%, 47%, #d6b870 47%);
     width: 100vw;
     height: 100vh;
-    /* background-color: red;
-    color: white; */
+}
+
+.nav-bg{
+    background-color: black;
+}
+
+.navbar-brand:hover{
+    color: #E31B6D !important;
+}
+
+.navbar-nav .nav-link {
+    color: white !important;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #E31B6D !important;
 }
