--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,15 @@
-body{
+Entire page styles
+*{
     font-family: 'Roboto', sans-serif;
 }
 
 .page_background_image{
     background-image: linear-gradient(45deg,#5cb5ea 45%, black 43%, 47%, #d6b870 47%);
-    width: 100vw;
-    height: 100vh;
+    /* width: 100%;
+    height: 100%; */
 }
 
+/*  Navigation bar styles */
 .nav-bg{
     background-color: black;
 }
@@ -22,4 +24,27 @@ body{
 
 .navbar-nav .nav-link:hover {
     color: #E31B6D !important;
+}
+
+/* Headings styles  */
+.section-headings{
+    border-bottom: 6px solid black; 
+    color: black;
+}
+
+/* Intro section styles ----------------------------------- */
+
+/* Profile picture styles */
+.profile-img{
+    border-radius:7%;
+    border: 3px solid black; 
+}
+
+#quote-contributor{
+    color: #1769A5
+}
+
+#introduction{
+    /* font-size: 1.2rem; */
+    line-height: 1.6;
 }
