--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 li {
     margin-bottom: 10px;
     line-height: 1.6;
@@ -35,10 +39,6 @@ a, a:hover{
     color: #E31B6D !important;
 }
 
-/* .navbar-nav .nav-link:active {
-    color: white !important;
-} */
-
 /* Headings styles  */
 .section-headings{
     border-bottom: 6px solid black; 
@@ -48,8 +48,8 @@ a, a:hover{
 /* Card styles */
 .card{
     width: 100%;
-    border-radius: 15px;
-    border: 3px solid black;
+    border-radius: 20px;
+    border: 4px solid black;
 }
 
 .card-body{
@@ -61,7 +61,7 @@ a, a:hover{
 /* Profile picture styles */
 .profile-img{
     border-radius:7%;
-    border: 3px solid black; 
+    border: 4px solid black; 
 }
 
 #quote-contributor{
@@ -69,7 +69,7 @@ a, a:hover{
 }
 
 #introduction{
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     line-height: 1.6;
 }
 
@@ -77,7 +77,7 @@ a, a:hover{
 
 .company-name-format{
     font-size: 1.8rem;
-    padding-top: 4%;
+    /* padding-top: 4%; */
     /* padding-right: 45%; */
     margin-bottom: 0; 
 }
@@ -94,7 +94,7 @@ a, a:hover{
 
 .job-role{
     font-size: 1.5rem;
-    padding-top: 7%;
+    /* padding-top: 7%; */
     margin-bottom: 0; 
     color: #8C712F;
 }
