--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,16 @@
 /* General styles */
 
+/* *{
+    font-family: 'PT Sans', sans-serif;
+} */
+
 li {
     margin-bottom: 10px;
     line-height: 1.6;
 }
 
-a, a:hover{
-    text-decoration: none;
-}
-
 .page_background_image{
-    background-image: linear-gradient(45deg,#5cb5ea 50%, black 50%, 52%, #d6b870 52%);
+    background-image: linear-gradient(45deg,#5cb5ea 50%, black 50%, 52%, #f8d071 52%);
 }
 
 
